<resources>
    <string name="app_name">Sastagram</string>
    <string name="enter_your_registered_email">Enter your registered email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_password_confirm">Enter your password confirm</string>
    <string name="login">Login</string>
    <string name="click_for_signup">Click for signup</string>
    <string name="enter_unique_username">Enter unique username</string>
    <string name="signup">Signup</string>
    <string name="already_have_account">Already have account</string>
    <string name="main_industries">Main Industries</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bio">This is bio</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_bio">Add bio</string>
    <string name="add_date_of_birth">Add Date Of Birth</string>
    <string name="private_information">Private Information</string>
    <string name="email">email</string>
    <string name="add_phone_no">Add Phone no</string>
    <string name="add_your_name">Add Your Name</string>
    <string name="add_caption">Add Caption</string>
    <string name="upload">Upload</string>
    <string name="caption">Caption</string>
    <string name="add_your_comment">Add your Comment...</string>
    <string name="post_by_user">post by user</string>
    <string name="tap_to_chat">Tap to chat</string>
    <string name="write_something">Write Something...</string>
    <string name="online">Online</string>
    <string name="follow">Follow</string>
</resources>